@@ -332,6 +332,7 @@
 16) In udp.c need check rt != NULL for prevent use after free.<br>
 17) Fix continuos allocation memory for modules.<br>
 18) Kernel start time set to Apr-03-2011 instead 2000Y.<br>
+19) Some symbols need export for compat with new code.<br>
 
 <br><br>
 <b>For support see:</b><br>
